--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 img{
-    width: 500px;
+    width: 200px;
 }
 body {
     text-align: center;
-    font-family: "Arial";
-    background: azure;
+    font-family: "Courier New";
+    background: aqua;
     color: purple;
 }
